chore: deprecated new Integer, new Long, new ContainerStore(x, y)